# dora-openarm-webxr

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  biome.jsonc  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yaml  package.yaml
dev/: README.md
example/: dataflow_mujoco.yaml  prepare_tls.sh
src/dora_openarm_webxr/: __init__.py  main.py  smoothing.py
src/dora_openarm_webxr/static/: ar.js  index.html
